// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Component with all props matches snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#931332",
      "borderRadius": 5,
      "height": 100,
      "marginBottom": "auto",
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": "auto",
      "opacity": 1,
      "position": "relative",
      "width": 200,
      "zIndex": 2,
    }
  }
  testID="sommelier-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
    testID="sommelier-button-textContainer"
  >
    <Text
      color="white"
      size="md"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "textDecorationColor": "black",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
          },
        ]
      }
      testID="sommelier-typography"
    >
      <View
        height={25}
        style={
          Array [
            Object {
              "height": 25,
              "marginRight": 9,
              "width": 25,
            },
          ]
        }
        width={25}
      >
        SvgMock
      </View>
      abc
    </Text>
  </View>
</View>
`;

exports[`Button component Component with only necessary props matches snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#931332",
      "borderRadius": 0,
      "height": 0,
      "marginBottom": "auto",
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": "auto",
      "opacity": 1,
      "position": "relative",
      "width": 0,
      "zIndex": 2,
    }
  }
  testID="sommelier-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
    testID="sommelier-button-textContainer"
  >
    <Text
      color="white"
      size="hg"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "textDecorationColor": "black",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
          },
        ]
      }
      testID="sommelier-typography"
    >
      <View
        style={
          Array [
            Object {
              "height": 0,
              "marginRight": 9,
              "width": 0,
            },
          ]
        }
      >
        SvgMock
      </View>
      abc
    </Text>
  </View>
</View>
`;
